# GitTimeRewrite

./: .gitignore  README.md
.github/workflows/: release-exe.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: git_history.rs  main.rs
frontend/: package-lock.json  package.json  tsconfig.vitest.json
frontend/src/: App.vue
frontend/src/api/: gitHistoryApi.ts
frontend/src/assets/: base.css
frontend/src/components/common/: BusyModal.vue  ConfirmModal.vue  ErrorModal.vue  OriginModal.vue
frontend/src/components/git/: GitTimelinePanel.vue
frontend/src/components/layout/: RepoTopBar.vue  WindowBar.vue
frontend/src/components/panel/: OperationPanel.vue
frontend/src/types/: gitHistory.ts
frontend/src/utils/: timelineScheduler.ts
