[package]
name = "git_time_rewrite_tauri"
version = "0.1.0"
description = "Git 历史时间编辑工具"
authors = ["NayukiChiba"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-dialog = "2.4.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
